--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <div id="container">
+    <h4 class="title">Available Files (without sms and registration):</h4>
+    <table class="table">
+      <tbody class="table-body">
+      </tbody>
+    </table>
   </div>
 </body>
 </html>
