--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <div id="container">
+    <!-- <input type="file" class="input-pdf"> -->
     <h4 class="title">Available Files (without sms and registration):</h4>
     <table class="table">
       <tbody class="table-body">
       </tbody>
     </table>
+    <span class="download-size"></span>
   </div>
 </body>
 </html>
