--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <tbody class="table-body">
       </tbody>
     </table>
-    <span class="download-size"></span>
   </div>
+  <span class="download-size none"></span>
 </body>
 </html>
